--- a/templates/home.html
+++ b/templates/home.html
@@ -46,8 +46,8 @@
 				<ul class="nav navbar-nav navbar-left" id="basic_links">
 					<li><a href="/home">HOME</a></li>
 					<li><a href="/events">道路</a></li>
-					<li id=""><a href='/blogs' class="btn-href" id="blogs_href">日常巡逻</a></li>
-					<li><a href="/products">定期巡逻</a></li>
+					<li id=""><a href='/showTable?obj=rcxc_info' class="btn-href" id="blogs_href">日常巡逻</a></li>
+					<li><a href="/showTable?obj=dqjcpzd_info">定期巡逻</a></li>
 {#					<li><a href="/showus">SHOWUS</a></li>#}
 {#					<li><a href="/DM">DM</a></li>#}
 				</ul>
