--- a/templates/showTable.html
+++ b/templates/showTable.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
+
     <title>ShowData</title>
     <style>
         body{
@@ -21,6 +22,10 @@
         .inserBlock{
             position: absolute;
             background-color: dimgray;
+        }
+        .attri4search{
+            color: black;
+            font-size: large;
         }
 
     </style>
@@ -40,9 +45,25 @@
         <p id="title">ShowTable</p>
     </div>
 </div>
-<div class="serach">
-    <button class="btn" id="searchBtn" style="float: right;color: black">Search</button>
-    <input class="form-control" type="Search" style="width: 20%;float: right" id="cond" placeholder="搜索">
+
+
+<div class="serach" >
+
+    <div id="inputB" style="display: inline;" >
+        <button class="btn" id="searchBtn" style="color: black;display: inline;float: right">Search</button>
+        <input class="form-control" type="Search" style="width: 20%;display: inline;float: right" id="cond" placeholder="搜索">
+    </div>
+     <div class="attri4search " style="display: inline" >
+        <select id='attr4Sear' style="
+            width: 10%;
+            height: 35px;
+            float: right" >
+            <option value="">按照属性搜索</option>
+            {% for i in colnames %}
+                <option value ={{ i }}>{{ i }}</option>
+            {% endfor %}
+        </select>
+    </div>
 </div>
 <br>
 <div class="insert">
